Done with showing user info and google signIn

--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -3,3 +3,19 @@
     color: white;
     font-size: 25px;
 }
+
+.headerLink:hover{
+    color: bisque;
+}
+
+.worldWide{
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+}
+
+.navLinksUser{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
